--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^10.12.4",
     "flowbite": "^2.4.1",
     "framer-motion": "^11.3.17",
+    "fs": "^0.0.1-security",
     "lmnt-node": "^1.2.3",
     "loadable-image": "^3.2.3",
     "md5": "^2.3.0",
@@ -44,9 +45,9 @@
     "zustand": "^5.0.0-rc.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-app-rewired start",
     "start-test": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-app-rewired build",
     "build-prod": "env-cmd -f .env.prod react-scripts build",
     "deploy": "react-scripts build && firebase deploy --only hosting",
     "test": "react-scripts test",
@@ -71,6 +72,7 @@
     ]
   },
   "devDependencies": {
+    "react-app-rewired": "^2.2.1",
     "tailwindcss": "^3.4.7"
   }
 }
